fix(webview): layout improvement for overflowing content

--- a/webview-ui/src/app/todo/todo-item/todo-item.component.scss
+++ b/webview-ui/src/app/todo/todo-item/todo-item.component.scss
@@ -65,6 +65,7 @@
 		flex-direction: column;
 		width: 100%;
 		padding: 0 0.5rem 0 0.25rem;
+		overflow: auto;
 
 		.edit-mode-wrapper {
 			display: flex;
